tests/tests/ui/relation_field_with_two_belongs_to_attr_is_err.stderr
error: field has more than one relation attribute
  --> tests/ui/relation_field_with_two_belongs_to_attr_is_err.rs:18:5
   |
18 |     #[belongs_to(key = user_id, references = id)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
